apps/media/deluge/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deluge
spec:
  selector:
    matchLabels:
      app: deluge
  template:
    metadata:
      labels:
        app: deluge
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - pc
      containers:
        - name: deluge
          image: lscr.io/linuxserver/deluge:latest
          ports:
            - containerPort: 8112
          volumeMounts:
            - mountPath: /data/torrent
              name: data
            - mountPath: /config
              name: config
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: deluge-data
        - name: config
          persistentVolumeClaim:
            claimName: deluge-config
